fixed spacing b/w words

--- a/app/assets/stylesheets/transliteration.scss
+++ b/app/assets/stylesheets/transliteration.scss
@@ -74,3 +74,7 @@ table .indopak{
     font-size: 25px !important;
   }
 }
+
+.text-transliteration span{
+  margin: 0 5px;
+}
